--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,21 +4,31 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <strong> <a class="nav-link active" aria-current="page" routerLink="/books"
+                        <strong> <a class="nav-link active" aria-current="page" routerLink="/registration"
                                 href="#">&nbsp;Home</a></strong>
                     </li>
                     <li class="nav-item">
                         <strong> <a class="nav-link active" aria-current="page" routerLink="/about"
                                 href="#">&nbsp;About</a></strong>
                     </li>
-
-
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <div class="collapse navbar-collapse mb-2" id="navbarSupportedContent">
                             <button class="btn btn-danger mx-2" data-bs-toggle="modal" data-bs-target="#addMemebr"
                                 type="submit">Add
                                 Member</button>
                         </div>
+                    </li> -->
+                    <li class="nav-item">
+                        <button routerLink="/registration" class="btn btn-danger mx-2">Add Member</button>
+                    </li>
+                    <li class="nav-item">
+                        <button routerLink="/updatemember" class="btn btn-danger mx-2">Update Member</button>
+                    </li>
+                    <li class="nav-item">
+                        <button routerLink="/updatedependents" class="btn btn-danger mx-2">Update Dependents</button>
+                    </li>
+                    <li class="nav-item">
+                        <button routerLink="/claim" class="btn btn-danger mx-2">Submit Claim</button>
                     </li>
                     <li class="nav-item">
                         <button routerLink="/login" class="btn btn-danger mx-2">Login</button>
@@ -27,6 +37,7 @@
                     <li class="nav-item">
                         <button routerLink="/login" class="btn btn-danger mx-2">Logout</button>
                     </li>
+
                 </ul>
             </div>
         </div>
@@ -47,7 +58,7 @@
                             <input type="text" [(ngModel)]="member.name" class="form-control" id="inputName">
                         </div>
                         <div class="mb-3">
-                            <label for="inputEmail" class="form-label">EmailId</label>
+                            <label for="inputEmail" class="form-label">Email Id</label>
                             <input type="email" [(ngModel)]="member.emailAddress" class="form-control" id="inputEmail">
                         </div>
                         <div class="mb-3">
