Added UI for claim

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,7 +28,10 @@
                         <button routerLink="/updatedependents" class="btn btn-danger mx-2">Update Dependents</button>
                     </li>
                     <li class="nav-item">
-                        <button routerLink="/claim" class="btn btn-danger mx-2">Submit Claim</button>
+                        <button routerLink="/claim" class="btn btn-danger mx-2">Member Claim</button>
+                    </li>
+                    <li class="nav-item">
+                        <button routerLink="/memberclaim" class="btn btn-danger mx-2">Claim For Dependents</button>
                     </li>
                     <li class="nav-item">
                         <button routerLink="/login" class="btn btn-danger mx-2">Login</button>
