--- a/src/app/components/updatedependents/updatedependents.component.html
+++ b/src/app/components/updatedependents/updatedependents.component.html
@@ -36,13 +36,13 @@
             <h3 style="text-align: center;">Member Details</h3>
             <div class="mb-3">
               <label for="inputContact" class="form-label">Date of Birth</label>
-              <input type="text" [(ngModel)]="dependent.dob" class="form-control" id="inputContact">
+              <input type="text" [(ngModel)]="savedependent.dob" class="form-control" id="inputContact">
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
              <button type="button" class="btn btn-outline-success"
-             (click)="updateDependent(dependent,dependent.id)">Update</button>
+             (click)="updateDependent(savedependent,savedependent.id)">Update</button>
+             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
