--- a/src/app/components/memberdependents/memberdependents.component.html
+++ b/src/app/components/memberdependents/memberdependents.component.html
@@ -4,7 +4,6 @@
             <h3 class="card-title text-center">Add Dependent</h3>
             <form (ngSubmit)="saveDependents(dependents)" #registerForm="ngForm">
                 <div class="container-2">
-
                     <div class="mb-3">
                         <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name"
                             [(ngModel)]="dependents.name" #name="ngModel" maxlength="15" required>
@@ -12,9 +11,7 @@
                             style="color:rgb(223, 16, 44)">*Name is Required</div>
                         <div *ngIf="(name.touched || registerForm.submitted) && name.errors?.['maxlength']"
                             style="color:rgb(223, 13, 48)">*Name should not be more than 15 characters</div>
-
                     </div>
-
                     <div class="mb-3">
                         <input type="date" class="form-control" id="dob" name="dob" placeholder="Enter Date Of Birth"
                             [(ngModel)]="dependents.dob" #dob="ngModel" required [max]="getToday()">
@@ -23,7 +20,7 @@
                     </div>
                     <div class="makecenter">
                         <button type="submit" class="btn btn-success">Submit</button>
-                        <button routerLink="/registration" class="btn btn-secondary mx-2">close</button>
+                        <button routerLink="/updatemember" class="btn btn-secondary mx-2">close</button>
                     </div>
                 </div>
             </form>
