--- a/src/app/components/memberdependents/memberdependents.component.html
+++ b/src/app/components/memberdependents/memberdependents.component.html
@@ -5,6 +5,7 @@
             <form (ngSubmit)="saveDependents(dependents)" #registerForm="ngForm">
                 <div class="container-2">
                     <div class="mb-3">
+ 
                         <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name"
                             [(ngModel)]="dependents.name" #name="ngModel" maxlength="15" required>
                         <div *ngIf="(name.touched || registerForm.submitted) && name.errors?.['required']"
@@ -13,13 +14,14 @@
                             style="color:rgb(223, 13, 48)">*Name should not be more than 15 characters</div>
                     </div>
                     <div class="mb-3">
+                        <label>Enter Date Of Birth</label>
                         <input type="date" class="form-control" id="dob" name="dob" placeholder="Enter Date Of Birth"
                             [(ngModel)]="dependents.dob" #dob="ngModel" required [max]="getToday()">
                         <div *ngIf="(dob.touched || registerForm.submitted) && dob.errors?.['required']"
                             style="color:rgb(212, 16, 16)">Date of Birth is Required</div>
                     </div>
                     <div class="makecenter">
-                        <button type="submit" class="btn btn-success">Submit</button>
+                        <button type="submit" class="btn btn-success" [disabled]="!registerForm.valid">Submit</button>
                         <button routerLink="/updatemember" class="btn btn-secondary mx-2">close</button>
                     </div>
                 </div>
