--- a/src/app/components/welcomepage/welcomepage.component.html
+++ b/src/app/components/welcomepage/welcomepage.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3" style="max-width: 1264px;">
+<div class="card mb-3">
     <div class="row g-0">
       <div class="col-md-4">
         <img src="assets\homeinsurance.jpg" class="img-fluid rounded-start" alt="...">
